--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <title>Shop</title>
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<div class="title">
 <h2>Shop</h2>
-<div class="products"></div>
+    <p>Sustainable Streetwear from DEDICATED, Organic and Fairtrade-certified cotton, browse and fillter below.</p>
+</div>
+<div class="select">
 
-<script type="text/javascript" src="products.js"></script>
-<script type="text/javascript" src="script.js"></script>
+</div>
+<div class="goods">
+
+
+</div>
+
+<script type="text/javascript" src="js/products.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 <!--<script src="js/bootstrap.js"></script>-->
 </body>
 </html>
