--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 <script type="text/javascript" src="js/products.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
-<!--<script src="js/bootstrap.js"></script>-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="js/bootstrap.js"></script>
+
 </body>
 </html>
