--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>Shop</h2>
     <p>Sustainable Streetwear from DEDICATED, Organic and Fairtrade-certified cotton, browse and fillter below.</p>
 </div>
-<div class="select">
+<div class="select form-inline">
 
 </div>
 <div class="goods">
